# pdf-visual-diff-online

./: .env.example  .gitignore  CODEX_GOAL_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_HANDOFF.md  LICENSE  PRODUCT_REQUIREMENTS.md  README.md  RELEASE_QUALIFICATION_CHECKLIST.md  SECURITY.md  docker-compose.single.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts
apps/web/e2e/: compare.spec.ts  home.spec.ts
apps/web/public/.well-known/: security.txt
apps/web/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apps/web/src/app/license/: page.tsx
apps/web/src/components/: BboxOverlay.tsx  DiffDrawer.tsx  Footer.tsx  LegalProse.tsx  PagePreview.tsx  PdfDiffPlayground.tsx  SeoBar.tsx  SeoLanding.tsx  TopBar.tsx
apps/web/src/lib/: api.ts  assertMessages.ts
apps/worker/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
apps/worker/app/: __init__.py  diff_engine.py  main.py  models.py
apps/worker/tests/: conftest.py  test_acceptance.py  test_api.py  test_artifact_security.py  test_assert_signature.py  test_baseline_security.py  test_diff_engine.py  test_encrypted.py  test_golden.py  test_perf.py  test_pixel_stability.py
apps/worker/tests/golden/: contract-v1-v2.json
legal/: README.md  disclaimer.md  privacy.md  terms.md
samples/.job-a1/: summary.html
samples/.job-a2/: summary.html
samples/.job-a3/: summary.html
scripts/: generate_samples.py
(+10 files in other folders)
