[project]
name = "pdf-diff-worker"
version = "1.0.0"
description = "PdfDiff comparison worker"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.12",
  "pymupdf>=1.24.0",
  "Pillow>=10.4.0",
  "pikepdf>=9.4.0",
  "numpy>=2.1.0",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
